# crcglot

./: .gitattributes  .gitignore  .markdownlint.jsonc  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  README.md  cspell.json  llms.txt  pyproject.toml
.github/workflows/: publish.yml  tests.yml  wheels.yml
docs/: ARCHITECTURE.md  MCP.md  api.md  certification.md  cli.md  fable-verification-report.md  generated-code.md  independent-verification-report.md  index.md
docs/verification/: 2026-07-02-fable.md  index.md
scripts/: RELEASE.md  benchmark.py  check.ps1  gen_vectors.py  regenerate_examples.py  release_common.py  release_prep.py  release_publish.py  wsl_test.sh
src/crcglot/: __init__.py  _c.c  _c.pyi  _crclink.py  _detect.py  _encode.py  _formats.py  _helpers.py  _invoke.py  _reverse.py  _trailers.py  _vectors.py  _wire.py  attribution.py  c.py  catalogue.py  checksums.py  cli.py  csharp.py  detect.py  encode.py  exceptions.py  go.py  python.py  reverse.py  rust.py  stream.py  targets.py  verbs.py  verification.py  verilog.py  vhdl.py  zig.py
src/crcglot/comments/: __init__.py  base.py  docfx.py  doxygen.py  godoc.py  google.py  javadoc.py  jsdoc.py  model.py  numpy.py  registry.py  rest.py  rustdoc.py
src/crcglot/lang/: __init__.py  c.py  csharp.py  go.py  java.py  python.py  rust.py  typescript.py  verilog.py  vhdl.py
src/crcglot/mcp/: __init__.py  _wire.py  server.py
tests/: conftest.py  test_attribution.py  test_c_extension.py  test_c_gen.py  test_catalogue.py  test_checksums.py  test_cli.py  test_comments.py  test_crcglot.py  test_crcglot_custom.py  test_crcglot_exec.py  test_crclink.py  test_csharp_gen.py  test_detect.py  test_differential_random.py  test_encode.py  test_exceptions.py  test_external_vectors.py  test_formats.py  test_generate_files.py  test_go_gen.py  test_independent_vectors.py  test_java_gen.py  test_lazy_init.py  test_mcp.py  test_naming.py  test_oracle_mutation.py  test_python_gen.py  test_reverse.py  test_rust_gen.py  test_stream.py  test_trailers.py  test_typescript_gen.py  test_vectors_provenance.py  test_verbs.py  test_verification_vectors.py  test_verilog_gen.py  test_vhdl_gen.py  test_zig_gen.py
